[project]
name = "projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.1",
    "asyncio>=4.0.0",
    "chromadb>=1.2.2",
    "fastapi>=0.120.1",
    "google-genai>=1.46.0",
    "groq>=0.33.0",
    "openai>=2.6.1",
    "pypdf>=6.1.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
